// Vitest Snapshot v1

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": true,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "fields": [],
          "name": "Foo",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": true,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": true,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "fields": [],
          "name": "Foo",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "multiline": true,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "EntityType",
        },
      ],
      "kind": "entity",
      "name": "Bar",
      "status": "new",
    },
  ],
  "schema": AdminSchema {
    "spec": {
      "entityTypes": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "name": "self",
          "required": false,
          "type": "EntityType",
        },
      ],
      "name": "Bar",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [],
  "schema": AdminSchema {
    "spec": {
      "entityTypes": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "ValueType",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "kind": "value",
      "name": "Bar",
      "status": "new",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "name": "self",
          "required": false,
          "type": "ValueType",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "name": "Bar",
    },
  ],
}
`;
